Eigen dependency is pointing to ros/indigo/share/cmake-modules to look for cmake variables

--- a/src/reconst3d/CMakeLists.txt
+++ b/src/reconst3d/CMakeLists.txt
@@ -16,7 +16,7 @@ include_directories(SYSTEM ${PCL_INCLUDE_DIRS}
 FIND_PACKAGE(Eigen3)
 find_package(libg2o)
 
-include_directories(SYSTEM ${EIGEN3_INCLUDE_DIRS})
+include_directories(SYSTEM ${Eigen_INCLUDE_DIRS})
 
 # add reconst3d library
 file(GLOB reconst3d_sources "*.cpp")
