Get statibility on OSX

--- a/src/opencv_candidate/CMakeLists.txt
+++ b/src/opencv_candidate/CMakeLists.txt
@@ -1,14 +1,16 @@
+#find_package(OpenCV REQUIRED)
 add_library(opencv_candidate datamatrix.cpp
                              feature2d.cpp
 )
-
 target_link_libraries(opencv_candidate
   ${OpenCV_LIBS}
-  )
-set_target_properties(opencv_candidate PROPERTIES COMPILE_FLAGS "-fopenmp" LINK_FLAGS "-fopenmp")
+)
 
+if(NOT APPLE)
+  set_target_properties(opencv_candidate PROPERTIES COMPILE_FLAGS "-fopenmp" LINK_FLAGS "-fopenmp")
+endif()
 #set_target_properties(opencv_candidate PROPERTIES COMPILE_FLAGS "-msse4.2")
 
 install(TARGETS opencv_candidate
     DESTINATION lib
-    )
+)
